tests/stacked_subtyping_errors/stacked_subtyping_errors.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:29

Cannot call `ouchWithNamed` with object literal bound to `foo` because: [incompatible-type]
 - object literal [1] is incompatible with `Foo` [2]
    - in property `bar`: array literal [3] is incompatible with `Bar` [4]
       - in index `0` > property `baz` > array element: number [5] is incompatible with string [6]

   test.js:5:29
   5| ouchWithNamed({bar: [{baz: [3]}]});
                                  ^ [5]

References:
   test.js:5:15
   5| ouchWithNamed({bar: [{baz: [3]}]});
                    ^^^^^^^^^^^^^^^^^^^ [1]
   test.js:4:37
   4| declare function ouchWithNamed(foo: Foo): void;
                                          ^^^ [2]
   test.js:5:21
   5| ouchWithNamed({bar: [{baz: [3]}]});
                          ^^^^^^^^^^^^ [3]
   test.js:2:18
   2| type Foo = {bar: Bar};
                       ^^^ [4]
   test.js:1:25
   1| type Bar = [{baz: Array<string>}];
                              ^^^^^^ [6]


Error ----------------------------------------------------------------------------------------------------- test.js:9:30

Cannot call `ouchWithNamed2` with object literal bound to `foo` because: [incompatible-type]
 - object literal [1] is incompatible with `Foo2` [2]
    - in property `bar`: array literal [3] is incompatible with `Bar` [4]
       - in index `0` > property `baz` > array element: number [5] is incompatible with string [6]

   test.js:9:30
   9| ouchWithNamed2({bar: [{baz: [3]}], bus: [{baz: [3]}]});
                                   ^ [5]

References:
   test.js:9:16
   9| ouchWithNamed2({bar: [{baz: [3]}], bus: [{baz: [3]}]});
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:8:38
   8| declare function ouchWithNamed2(foo: Foo2): void;
                                           ^^^^ [2]
   test.js:9:22
   9| ouchWithNamed2({bar: [{baz: [3]}], bus: [{baz: [3]}]});
                           ^^^^^^^^^^^^ [3]
   test.js:7:19
   7| type Foo2 = {bar: Bar, bus: Bar};
                        ^^^ [4]
   test.js:1:25
   1| type Bar = [{baz: Array<string>}];
                              ^^^^^^ [6]


Error ----------------------------------------------------------------------------------------------------- test.js:9:49

Cannot call `ouchWithNamed2` with object literal bound to `foo` because: [incompatible-type]
 - object literal [1] is incompatible with `Foo2` [2]
    - in property `bus`: array literal [3] is incompatible with `Bar` [4]
       - in index `0` > property `baz` > array element: number [5] is incompatible with string [6]

   test.js:9:49
   9| ouchWithNamed2({bar: [{baz: [3]}], bus: [{baz: [3]}]});
                                                      ^ [5]

References:
   test.js:9:16
   9| ouchWithNamed2({bar: [{baz: [3]}], bus: [{baz: [3]}]});
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:8:38
   8| declare function ouchWithNamed2(foo: Foo2): void;
                                           ^^^^ [2]
   test.js:9:41
   9| ouchWithNamed2({bar: [{baz: [3]}], bus: [{baz: [3]}]});
                                              ^^^^^^^^^^^^ [3]
   test.js:7:29
   7| type Foo2 = {bar: Bar, bus: Bar};
                                  ^^^ [4]
   test.js:1:25
   1| type Bar = [{baz: Array<string>}];
                              ^^^^^^ [6]


Error ---------------------------------------------------------------------------------------------------- test.js:15:35

Cannot call `ouchWithNamed3` with object literal bound to `foo` because: [incompatible-type]
 - object literal [1] is incompatible with `Foo3` [2]
    - in property `bar`: object literal [3] is incompatible with `Bar2` [4]
       - in property `baz` > property `ouch`: number [5] is incompatible with string [6]

   test.js:15:35
   15| ouchWithNamed3({bar: {baz: {ouch: 3}}});
                                         ^ [5]

References:
   test.js:15:16
   15| ouchWithNamed3({bar: {baz: {ouch: 3}}});
                      ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:14:38
   14| declare function ouchWithNamed3(foo: Foo3): void;
                                            ^^^^ [2]
   test.js:15:22
   15| ouchWithNamed3({bar: {baz: {ouch: 3}}});
                            ^^^^^^^^^^^^^^^^ [3]
   test.js:11:19
   11| type Foo3 = {bar: Bar2};
                         ^^^^ [4]
   test.js:13:19
   13| type Baz = {ouch: string};
                         ^^^^^^ [6]


Error ---------------------------------------------------------------------------------------------------- test.js:18:27

Cannot call `ouchUnnamed` with object literal bound to `foo` because in property `bar[0].baz` > array element:
number [1] is incompatible with string [2]. [incompatible-type]

   test.js:18:27
   18| ouchUnnamed({bar: [{baz: [3]}]});
                                 ^ [1]

References:
   test.js:17:54
   17| declare function ouchUnnamed(foo: {bar: [{baz: Array<string>}]}): void;
                                                            ^^^^^^ [2]



Found 5 errors
